fix: добавлены зависимости Mockito и исправлен CI